mockiato/tests/ui/malformed-mockable-attr.stderr
error: Unsupported syntax for #[mockable]
 --> $DIR/malformed-mockable-attr.rs:3:12
  |
3 | #[mockable("Bar")]
  |            ^^^^^
  |
  = help: Example usage: #[mockable(name = "FooMock")]

error: aborting due to previous error

